Changed the required sp to dp

--- a/app/src/main/res/drawable/circle_filled.xml
+++ b/app/src/main/res/drawable/circle_filled.xml
@@ -7,6 +7,6 @@
         android:color="#10323232"/>
 
     <size
-        android:width="40sp"
-        android:height="40sp"/>
+        android:width="40dp"
+        android:height="40dp"/>
 </shape>
