--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -15,22 +15,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="5sp"
+        android:layout_marginTop="5dp"
         android:background="?android:attr/selectableItemBackground">
 
         <ImageView
-            android:layout_width="30sp"
-            android:layout_height="30sp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/account_info"
             android:tint="#ffffff"
-            android:layout_margin="5sp"/>
+            android:layout_margin="5dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textSize="13sp"
-            android:layout_marginLeft="5sp"
+            android:textSize="13dp"
+            android:layout_marginLeft="5dp"
             android:text="Account Information"
             android:textColor="#ffffff"/>
 
@@ -43,21 +43,21 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="?android:attr/selectableItemBackground"
-        android:padding="5sp">
+        android:padding="5dp">
 
         <ImageView
-            android:layout_width="30sp"
-            android:layout_height="30sp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/verify_yourself"
             android:tint="#ffffff"
-            android:layout_margin="5sp"/>
+            android:layout_margin="5dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textSize="13sp"
-            android:layout_marginLeft="5sp"
+            android:textSize="13dp"
+            android:layout_marginLeft="5dp"
             android:text="Verify Yourself"
             android:textColor="#ffffff"/>
 
@@ -69,22 +69,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="5sp"
+        android:padding="5dp"
         android:background="?android:attr/selectableItemBackground">
 
         <ImageView
-            android:layout_width="30sp"
-            android:layout_height="30sp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/free_coins"
             android:tint="#ffffff"
-            android:layout_margin="5sp"/>
+            android:layout_margin="5dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textSize="13sp"
-            android:layout_marginLeft="5sp"
+            android:textSize="13dp"
+            android:layout_marginLeft="5dp"
             android:text="Free Coins"
             android:textColor="#ffffff"/>
 
@@ -98,21 +98,21 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="?android:attr/selectableItemBackground"
-        android:padding="5sp">
+        android:padding="5dp">
 
         <ImageView
-            android:layout_width="30sp"
-            android:layout_height="30sp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/buy_coins"
             android:tint="#ffffff"
-            android:layout_margin="5sp"/>
+            android:layout_margin="5dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textSize="13sp"
-            android:layout_marginLeft="5sp"
+            android:textSize="13dp"
+            android:layout_marginLeft="5dp"
             android:text="Buy More Coins"
             android:textColor="#ffffff"/>
 
@@ -127,21 +127,21 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="?android:attr/selectableItemBackground"
-        android:padding="5sp">
+        android:padding="5dp">
 
         <ImageView
-            android:layout_width="30sp"
-            android:layout_height="30sp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/theme"
             android:tint="#ffffff"
-            android:layout_margin="5sp"/>
+            android:layout_margin="5dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textSize="13sp"
-            android:layout_marginLeft="5sp"
+            android:textSize="13dp"
+            android:layout_marginLeft="5dp"
             android:text="Themes"
             android:textColor="#ffffff"/>
 
@@ -154,21 +154,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="5sp">
+        android:padding="5dp">
 
         <ImageView
-            android:layout_width="30sp"
-            android:layout_height="30sp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/check_in"
             android:tint="#ffffff"
-            android:layout_margin="5sp"/>
+            android:layout_margin="5dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textSize="13sp"
-            android:layout_marginLeft="5sp"
+            android:textSize="13dp"
+            android:layout_marginLeft="5dp"
             android:text="Daily Check-In"
             android:textColor="#ffffff"/>
 
@@ -179,7 +179,7 @@
     <TextView
         android:layout_above="@+id/contactus"
         android:layout_width="match_parent"
-        android:layout_height="1sp"
+        android:layout_height="1dp"
         android:background="#ffffff"/>
 
     <LinearLayout
@@ -189,21 +189,21 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="?android:attr/selectableItemBackground"
-        android:padding="4sp">
+        android:padding="4dp">
 
         <ImageView
-            android:layout_width="25sp"
-            android:layout_height="25sp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:src="@drawable/contact_us"
             android:tint="#ffffff"
-            android:layout_margin="5sp"/>
+            android:layout_margin="5dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textSize="10sp"
-            android:layout_marginLeft="5sp"
+            android:textSize="10dp"
+            android:layout_marginLeft="5dp"
             android:text="Contact / Support"
             android:textColor="#ffffff"/>
 
@@ -217,21 +217,21 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="?android:attr/selectableItemBackground"
-        android:padding="4sp">
+        android:padding="4dp">
 
         <ImageView
-            android:layout_width="25sp"
-            android:layout_height="25sp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:src="@drawable/about_us"
             android:tint="#ffffff"
-            android:layout_margin="5sp"/>
+            android:layout_margin="5dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textSize="10sp"
-            android:layout_marginLeft="5sp"
+            android:textSize="10dp"
+            android:layout_marginLeft="5dp"
             android:text="About us"
             android:textColor="#ffffff"/>
 
