--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -5,6 +5,6 @@
         android:angle="90"
         android:type="linear"
         android:startColor="#aa000000"
-        android:gradientRadius="1000sp"/>
+        android:gradientRadius="1000dp"/>
 
 </shape>
