--- a/app/src/main/res/drawable/underline.xml
+++ b/app/src/main/res/drawable/underline.xml
@@ -4,7 +4,7 @@
         <shape>
             <solid android:color="@android:color/transparent" />
             <stroke
-                android:width="0.5sp"
+                android:width="0.5dp"
                 android:color="#ffffff" />
         </shape>
     </item>
