--- a/app/src/main/res/layout/abs_layout.xml
+++ b/app/src/main/res/layout/abs_layout.xml
@@ -11,6 +11,6 @@
         android:text="24 Crafts"
         android:textColor="#ffffff"
         android:id="@+id/mytext"
-        android:textSize="18sp" />
+        android:textSize="18dp" />
 
 </LinearLayout>
