--- a/app/src/main/res/layout/activity_account_info.xml
+++ b/app/src/main/res/layout/activity_account_info.xml
@@ -21,10 +21,10 @@
 
             <ImageButton
                 android:id="@+id/profile_back"
-                android:layout_width="25sp"
+                android:layout_width="25dp"
                 android:layout_height="?attr/actionBarSize"
-                android:paddingTop="15sp"
-                android:paddingBottom="15sp"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
                 android:src="@drawable/back"
                 android:scaleType="centerCrop"
                 android:tint="#ffffff"
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/profile_back"
                 android:text="Account Info"
-                android:textSize="20sp"
+                android:textSize="20dp"
                 android:gravity="center_vertical"/>
 
 
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content">
 
     <TextView
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/AccInfoName"
@@ -66,7 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/AccInfoNameText"
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:layout_below="@id/AccInfoName"/>
 
 
@@ -74,20 +74,20 @@
         android:layout_marginTop="20dp"
         android:layout_below="@id/AccInfoNameText"
         android:layout_width="match_parent"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:layout_height="wrap_content"
         android:id="@+id/AccInfoBirthday"
         android:text="Birthday"/>
     <TextView
         android:textColor="#FFA000"
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/AccInfoBirthdayText"
         android:layout_below="@id/AccInfoBirthday"/>
 
     <TextView
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:layout_marginTop="20dp"
         android:layout_below="@id/AccInfoBirthdayText"
         android:layout_width="match_parent"
@@ -95,7 +95,7 @@
         android:id="@+id/AccInfoMobile"
         android:text="Mobile"/>
     <TextView
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:textColor="#FFA000"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -103,7 +103,7 @@
         android:layout_below="@id/AccInfoMobile"/>
 
         <TextView
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:layout_marginTop="20dp"
             android:layout_below="@id/AccInfoMobileText"
             android:layout_width="match_parent"
@@ -112,7 +112,7 @@
             android:text="Email" />
 
         <TextView
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:textColor="#FFA000"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -128,7 +128,7 @@
             android:layout_marginTop="31dp"
             android:gravity="center_horizontal"
             android:text="@string/accountinfotext"
-            android:textSize="15sp" />
+            android:textSize="15dp" />
 
 
     <TextView
