--- a/app/src/main/res/layout/activity_daily_check_in.xml
+++ b/app/src/main/res/layout/activity_daily_check_in.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/CheckinText"
         android:text="CHECK IN"
-        android:textSize="25sp"
+        android:textSize="25dp"
         android:gravity="center_horizontal"/>
 
     <TextView
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_below="@id/CheckinText"
         android:gravity="center_horizontal"
-        android:textSize="15sp"
+        android:textSize="15dp"
         android:layout_height="wrap_content" />
 
     <LinearLayout
