--- a/app/src/main/res/layout/activity_dashboard_favourites_tab_fragment.xml
+++ b/app/src/main/res/layout/activity_dashboard_favourites_tab_fragment.xml
@@ -14,13 +14,13 @@
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="3"
-       android:verticalSpacing="2sp"
-       android:horizontalSpacing="2sp"
+       android:verticalSpacing="2dp"
+       android:horizontalSpacing="2dp"
        android:layout_gravity="center_horizontal"
-       android:layout_marginRight="5sp"
-       android:layout_marginLeft="5sp"
-       android:paddingTop="5sp"
-       android:layout_marginTop="10sp" />
+       android:layout_marginRight="5dp"
+       android:layout_marginLeft="5dp"
+       android:paddingTop="5dp"
+       android:layout_marginTop="10dp" />
 
    </LinearLayout>
 
