--- a/app/src/main/res/layout/activity_dashboard_messages_tab_fragment.xml
+++ b/app/src/main/res/layout/activity_dashboard_messages_tab_fragment.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         app:tabMode="fixed"
         android:background="#212121"
-        android:elevation="5sp"
+        android:elevation="5dp"
         app:tabGravity="fill">
 
     </android.support.design.widget.TabLayout>
