--- a/app/src/main/res/layout/activity_edit_picture.xml
+++ b/app/src/main/res/layout/activity_edit_picture.xml
@@ -11,7 +11,7 @@
     <com.steelkiwi.cropiwa.CropIwaView
         android:id="@+id/crop_view"
         android:layout_width="match_parent"
-        android:layout_height="400sp"
+        android:layout_height="400dp"
         app:ci_dynamic_aspect_ratio="false"
         app:ci_draw_grid="true"
         app:ci_initial_position="centerCrop"
@@ -26,30 +26,30 @@
     <LinearLayout
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="50sp"
+        android:layout_height="50dp"
         android:background="#212121"
-        android:elevation="8sp"
+        android:elevation="8dp"
         android:orientation="horizontal"
         android:weightSum="5">
 
         <Button
             android:id="@+id/cancelthecrop"
-            android:layout_width="0sp"
+            android:layout_width="0dp"
             android:layout_weight="2.5"
             android:layout_height="match_parent"
             android:text="cancel"
             android:textColor="#ffffff"
-            android:layout_margin="1sp"
+            android:layout_margin="1dp"
             android:background="?android:attr/selectableItemBackground"/>
 
         <Button
             android:id="@+id/cropandsave"
-            android:layout_width="0sp"
+            android:layout_width="0dp"
             android:layout_weight="2.5"
             android:layout_height="match_parent"
             android:text="continue"
             android:textColor="#ffffff"
-            android:layout_margin="1sp"
+            android:layout_margin="1dp"
             android:background="?android:attr/selectableItemBackground"/>
 
     </LinearLayout>
