--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -17,7 +17,7 @@
         android:inputType="textEmailAddress"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:paddingLeft="32sp"
+        android:paddingLeft="32dp"
         android:id="@+id/forgot_password_edittext"
         android:layout_centerInParent="true"/>
 
