--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -20,38 +20,38 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/splashlogo"
-        android:layout_width="150sp"
-        android:layout_height="150sp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:src="@drawable/logo"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100sp"/>
+        android:layout_marginTop="100dp"/>
 
     <LinearLayout
         android:gravity="center"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:padding="10sp"
-        android:layout_marginBottom="10sp"
+        android:padding="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
         android:id="@+id/fb_login_button"
-        android:layout_width="220sp"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@drawable/round_card"
-        android:layout_margin="5sp">
+        android:layout_margin="5dp">
 
         <ImageView
-            android:layout_width="40sp"
-            android:layout_height="40sp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/facebook" />
 
             <Button
-                android:layout_width="180sp"
-                android:layout_height="40sp"
+                android:layout_width="180dp"
+                android:layout_height="40dp"
                 android:text="Login with Facebook"
                 android:textColor="#000000"
                 android:onClick="fbLogin"
@@ -74,19 +74,19 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@drawable/round_card"
-        android:layout_margin="5sp" >
+        android:layout_margin="5dp" >
 
         <ImageView
-            android:layout_width="40sp"
-            android:layout_height="40sp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/google_icon"
             android:background="@drawable/circle_filled"
-            android:padding="10sp"/>
+            android:padding="10dp"/>
 
             <Button
                 android:id="@+id/bn_login"
-                android:layout_width="180sp"
-                android:layout_height="40sp"
+                android:layout_width="180dp"
+                android:layout_height="40dp"
                 android:text="Login with Google"
                 android:textColor="#000000"
                 android:textAllCaps="false"
@@ -99,9 +99,9 @@
             android:visibility="gone"
             android:text="Login with Google"
             android:textColor="#000000"
-            android:layout_width="183sp"
+            android:layout_width="183dp"
             android:fontFamily="sans-serif-condensed"
-            android:layout_height="40sp"
+            android:layout_height="40dp"
             android:gravity="center"
             android:background="?android:attr/selectableItemBackground"/>
 
@@ -113,18 +113,18 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:background="@drawable/round_card"
-            android:layout_margin="5sp" >
+            android:layout_margin="5dp" >
 
             <ImageView
-                android:layout_width="40sp"
-                android:layout_height="40sp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:src="@drawable/instagram_icon"
-                android:padding="2sp"/>
+                android:padding="2dp"/>
 
             <Button
                 android:id="@+id/login_for_instagram"
-                android:layout_width="180sp"
-                android:layout_height="40sp"
+                android:layout_width="180dp"
+                android:layout_height="40dp"
                 android:text="Login with Instagram"
                 android:textColor="#000000"
                 android:textAllCaps="false"
@@ -137,9 +137,9 @@
                 android:visibility="gone"
                 android:text="Login with Instagram"
                 android:textColor="#000000"
-                android:layout_width="180sp"
+                android:layout_width="180dp"
                 android:fontFamily="sans-serif-condensed"
-                android:layout_height="40sp"
+                android:layout_height="40dp"
                 android:gravity="center"
                 android:background="?android:attr/selectableItemBackground"/>
 
@@ -147,17 +147,17 @@
 
 
         <LinearLayout
-            android:layout_marginTop="15sp"
+            android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center">
 
             <TextView
-                android:layout_width="50sp"
+                android:layout_width="50dp"
                 android:background="#ffffff"
-                android:layout_height="1sp"
-                android:layout_marginRight="5sp"
+                android:layout_height="1dp"
+                android:layout_marginRight="5dp"
                 android:layout_gravity="center_vertical"/>
 
             <TextView
@@ -170,20 +170,20 @@
                 android:layout_gravity="center_vertical"/>
 
             <TextView
-                android:layout_width="50sp"
+                android:layout_width="50dp"
                 android:background="#ffffff"
-                android:layout_height="1sp"
-                android:layout_marginLeft="5sp"
+                android:layout_height="1dp"
+                android:layout_marginLeft="5dp"
                 android:layout_gravity="center_vertical"/>
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginTop="10sp"
+            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginBottom="40sp">
+            android:layout_marginBottom="40dp">
 
             <LinearLayout
                 android:id="@+id/sign_up_button"
@@ -193,11 +193,11 @@
 
                 <ImageView
                     android:id="@+id/signup_iconz"
-                    android:layout_width="45sp"
-                    android:layout_height="45sp"
-                    android:padding="5sp"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:padding="5dp"
                     android:src="@drawable/signup_icon"
-                    android:layout_marginRight="50sp"
+                    android:layout_marginRight="50dp"
                     android:background="?android:attr/selectableItemBackground" />
 
                 <TextView
@@ -217,9 +217,9 @@
 
                 <ImageView
                     android:id="@+id/login_iconz"
-                    android:layout_width="45sp"
-                    android:layout_height="45sp"
-                    android:padding="5sp"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:padding="5dp"
                     android:src="@drawable/login_icon"
                     android:background="?android:attr/selectableItemBackground" />
 
