--- a/app/src/main/res/layout/activity_lucky_wheel_main.xml
+++ b/app/src/main/res/layout/activity_lucky_wheel_main.xml
@@ -19,7 +19,7 @@
 
     <Button
         android:id="@+id/play"
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:textColor="@android:color/white"
         android:text="PLAY"
         android:textStyle="bold"
