--- a/app/src/main/res/layout/activity_people_nearby.xml
+++ b/app/src/main/res/layout/activity_people_nearby.xml
@@ -57,8 +57,8 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageView6"
-            android:layout_width="52sp"
-            android:layout_height="52sp"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
             android:layout_above="@+id/imageView2"
             android:layout_marginBottom="17dp"
             android:layout_toLeftOf="@+id/imageView8"
@@ -69,8 +69,8 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageView3"
-            android:layout_width="52sp"
-            android:layout_height="52sp"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
             android:layout_above="@+id/imageView8"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
@@ -87,8 +87,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView4"
-        android:layout_width="52sp"
-        android:layout_height="52sp"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
         android:layout_above="@+id/progressBar"
         android:layout_marginBottom="52dp"
         android:layout_toLeftOf="@+id/progressBar"
@@ -99,8 +99,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView5"
-        android:layout_width="52sp"
-        android:layout_height="52sp"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
         android:layout_alignBottom="@+id/imageView7"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -134,8 +134,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView7"
-        android:layout_width="52sp"
-        android:layout_height="52sp"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
         android:layout_alignBottom="@+id/imageView4"
         android:layout_marginBottom="12dp"
         android:layout_marginLeft="11dp"
