--- a/app/src/main/res/layout/activity_privacy_policy.xml
+++ b/app/src/main/res/layout/activity_privacy_policy.xml
@@ -13,8 +13,8 @@
         android:layout_height="match_parent"
         android:text="@string/privacy_policy"
         android:textColor="#ffffff"
-        android:layout_marginTop="16sp"
-        android:layout_marginLeft="16sp"
-        android:layout_marginRight="16sp" />
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp" />
 
 </ScrollView>
