--- a/app/src/main/res/layout/activity_promote_profile_pop_up.xml
+++ b/app/src/main/res/layout/activity_promote_profile_pop_up.xml
@@ -14,7 +14,7 @@
         android:id="@+id/header_textview"
         android:text="Promote Yourself"
         android:textStyle="bold"
-        android:textSize="25sp"
+        android:textSize="25dp"
         android:layout_marginBottom="10dp"
         android:gravity="center_horizontal"/>
 
