--- a/app/src/main/res/layout/activity_purchase_coins.xml
+++ b/app/src/main/res/layout/activity_purchase_coins.xml
@@ -60,14 +60,14 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:textSize="18sp"
+                android:textSize="18dp"
                 android:text="Current Coins : "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
 
             <TextView
-                android:textSize="18sp"
+                android:textSize="18dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="250"/>
@@ -80,7 +80,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:padding="15sp"
+        android:padding="15dp"
         android:id="@+id/RelativeLayout3"
         android:layout_below="@id/RelativeLayout2"
         android:layout_height="wrap_content">
@@ -89,25 +89,25 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_1"
-        android:padding="10sp"
-        android:layout_width="130sp"
-        android:layout_height="100sp"
-        android:layout_margin="16sp"
-        app:cardCornerRadius="2sp"
-        app:cardElevation="8sp"
+        android:padding="10dp"
+        android:layout_width="130dp"
+        android:layout_height="100dp"
+        android:layout_margin="16dp"
+        app:cardCornerRadius="2dp"
+        app:cardElevation="8dp"
         app:cardPreventCornerOverlap="false"
-        app:contentPadding="0sp">
+        app:contentPadding="0dp">
 
         <RelativeLayout
-            android:layout_width="130sp"
-            android:layout_height="100sp">
+            android:layout_width="130dp"
+            android:layout_height="100dp">
         <ImageView
             android:layout_centerHorizontal="true"
             android:src="@drawable/coins1"
             android:id="@+id/RelativeLayout3Image1"
-            android:layout_marginTop="5sp"
-            android:layout_width="70sp"
-            android:layout_height="70sp" />
+            android:layout_marginTop="5dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp" />
         <TextView
             android:layout_below="@id/RelativeLayout3Image1"
             android:id="@+id/FrameLayout1Text1"
@@ -133,27 +133,27 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_view_2"
-            android:padding="10sp"
+            android:padding="10dp"
             android:layout_alignParentRight="true"
             android:layout_toRightOf="@id/card_view_1"
-            android:layout_width="130sp"
-            android:layout_height="100sp"
-            android:layout_margin="16sp"
-            app:cardCornerRadius="2sp"
-            app:cardElevation="8sp"
+            android:layout_width="130dp"
+            android:layout_height="100dp"
+            android:layout_margin="16dp"
+            app:cardCornerRadius="2dp"
+            app:cardElevation="8dp"
             app:cardPreventCornerOverlap="false"
-            app:contentPadding="0sp">
+            app:contentPadding="0dp">
 
             <RelativeLayout
-                android:layout_width="130sp"
-                android:layout_height="100sp">
+                android:layout_width="130dp"
+                android:layout_height="100dp">
                 <ImageView
                     android:src="@drawable/coins2"
                     android:layout_centerHorizontal="true"
                     android:id="@+id/RelativeLayout3Image2"
-                    android:layout_marginTop="5sp"
-                    android:layout_width="70sp"
-                    android:layout_height="70sp" />
+                    android:layout_marginTop="5dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp" />
                 <TextView
                     android:layout_below="@id/RelativeLayout3Image2"
                     android:id="@+id/FrameLayout1Text2"
@@ -184,28 +184,28 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_view_3"
-            android:padding="10sp"
+            android:padding="10dp"
             android:layout_below="@id/card_view_1"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_width="130sp"
-            android:layout_height="100sp"
-            android:layout_margin="16sp"
-            app:cardCornerRadius="2sp"
-            app:cardElevation="8sp"
+            android:layout_width="130dp"
+            android:layout_height="100dp"
+            android:layout_margin="16dp"
+            app:cardCornerRadius="2dp"
+            app:cardElevation="8dp"
             app:cardPreventCornerOverlap="false"
-            app:contentPadding="0sp">
+            app:contentPadding="0dp">
 
             <RelativeLayout
-                android:layout_width="130sp"
-                android:layout_height="100sp">
+                android:layout_width="130dp"
+                android:layout_height="100dp">
                 <ImageView
                     android:src="@drawable/coins3"
                     android:layout_centerHorizontal="true"
                     android:id="@+id/RelativeLayout3Image3"
-                    android:layout_marginTop="5sp"
-                    android:layout_width="70sp"
-                    android:layout_height="70sp" />
+                    android:layout_marginTop="5dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp" />
                 <TextView
                     android:layout_below="@id/RelativeLayout3Image3"
                     android:id="@+id/FrameLayout1Text3"
@@ -231,27 +231,27 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_view_4"
-            android:padding="10sp"
+            android:padding="10dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_width="130sp"
-            android:layout_height="100sp"
-            android:layout_margin="16sp"
-            app:cardCornerRadius="2sp"
-            app:cardElevation="8sp"
+            android:layout_width="130dp"
+            android:layout_height="100dp"
+            android:layout_margin="16dp"
+            app:cardCornerRadius="2dp"
+            app:cardElevation="8dp"
             app:cardPreventCornerOverlap="false"
-            app:contentPadding="0sp">
+            app:contentPadding="0dp">
 
             <RelativeLayout
-                android:layout_width="130sp"
-                android:layout_height="100sp">
+                android:layout_width="130dp"
+                android:layout_height="100dp">
                 <ImageView
                     android:src="@drawable/coins4"
                     android:layout_centerHorizontal="true"
                     android:id="@+id/RelativeLayout3Image4"
-                    android:layout_marginTop="5sp"
-                    android:layout_width="70sp"
-                    android:layout_height="70sp" />
+                    android:layout_marginTop="5dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp" />
                 <TextView
                     android:layout_below="@id/RelativeLayout3Image4"
                     android:id="@+id/FrameLayout1Text4"
