--- a/app/src/main/res/layout/activity_starting_screen.xml
+++ b/app/src/main/res/layout/activity_starting_screen.xml
@@ -22,7 +22,7 @@
             android:text="Who are you?"
             android:textColor="#e2e2e2"
             android:layout_marginTop="150dp"
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:gravity="center"
             />
 
