--- a/app/src/main/res/layout/activity_talent_hunter_main.xml
+++ b/app/src/main/res/layout/activity_talent_hunter_main.xml
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:textColor="@android:color/black"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:text="@string/initializing_faker"/>
 
     </LinearLayout>
