--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -16,35 +16,35 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="60sp"
-        android:layout_marginLeft="-30sp"
-        android:layout_marginTop="20sp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="-30dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/bubble"
-        android:paddingRight="40sp"
-        android:paddingLeft="50sp"
-        android:paddingTop="19sp"
+        android:paddingRight="40dp"
+        android:paddingLeft="50dp"
+        android:paddingTop="19dp"
         android:text="Verification"
-        android:textSize="20sp"/>
+        android:textSize="20dp"/>
 
         <LinearLayout
             android:id="@+id/phone_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-           android:elevation="8sp"
-            android:paddingLeft="40sp"
-            android:paddingRight="30sp"
-            android:paddingTop="10sp"
-            android:paddingBottom="10sp"
-            android:layout_marginTop="40sp"
-            android:layout_marginLeft="16sp"
-            android:layout_marginRight="16sp"
-            android:layout_marginBottom="16sp"
+           android:elevation="8dp"
+            android:paddingLeft="40dp"
+            android:paddingRight="30dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
             android:background="#ffffff">
 
             <ImageView
-                android:layout_width="55sp"
-                android:layout_height="50sp"
+                android:layout_width="55dp"
+                android:layout_height="50dp"
                 android:clickable="true"
                 android:id="@+id/phone"
                 android:src="@drawable/phone2"
@@ -58,23 +58,23 @@
                 android:layout_width="match_parent"
                 android:orientation="vertical"
                 android:layout_height="match_parent"
-                android:paddingLeft="16sp"
+                android:paddingLeft="16dp"
                 android:weightSum="2"
                 android:gravity="center">
 
                 <TextView
-                    android:layout_width="100sp"
+                    android:layout_width="100dp"
                     android:text="Phone"
                     android:textColor="#000000"
-                    android:textSize="20sp"
-                    android:layout_height="0sp"
+                    android:textSize="20dp"
+                    android:layout_height="0dp"
                     android:layout_weight="1.25"/>
 
                 <TextView
 
-                    android:layout_height="0sp"
+                    android:layout_height="0dp"
                     android:layout_weight="0.75"
-                    android:layout_width="100sp"
+                    android:layout_width="100dp"
                     android:id="@+id/phone_text_veri"
                     android:text="Verified !"
                     android:textColor="#ff99cc00"/>
@@ -89,19 +89,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-       android:elevation="8sp"
-        android:paddingLeft="40sp"
-        android:paddingRight="30sp"
-        android:paddingTop="10sp"
-        android:paddingBottom="10sp"
-        android:layout_marginLeft="16sp"
-        android:layout_marginRight="16sp"
-        android:layout_marginBottom="16sp"
+       android:elevation="8dp"
+        android:paddingLeft="40dp"
+        android:paddingRight="30dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:background="#ffffff">
 
         <ImageView
-            android:layout_width="55sp"
-            android:layout_height="53sp"
+            android:layout_width="55dp"
+            android:layout_height="53dp"
             android:id="@+id/fb"
             android:src="@drawable/facebook_black"
             android:clickable="true"
@@ -112,23 +112,23 @@
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_height="match_parent"
-            android:paddingLeft="16sp"
+            android:paddingLeft="16dp"
             android:weightSum="2"
             android:gravity="center">
 
             <TextView
-                android:layout_width="100sp"
+                android:layout_width="100dp"
                 android:text="Facebook"
                 android:textColor="#000000"
-                android:textSize="20sp"
-                android:layout_height="0sp"
+                android:textSize="20dp"
+                android:layout_height="0dp"
                 android:layout_weight="1.25"/>
 
             <TextView
 
-                android:layout_height="0sp"
+                android:layout_height="0dp"
                 android:layout_weight="0.75"
-                android:layout_width="100sp"
+                android:layout_width="100dp"
                 android:id="@+id/fb_text_veri"
                 android:text="Not verified !"
                 android:textColor="#ff4e4e"/>
@@ -142,22 +142,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-       android:elevation="8sp"
-        android:paddingLeft="40sp"
-        android:paddingRight="30sp"
-        android:paddingTop="10sp"
-        android:paddingBottom="10sp"
-        android:layout_marginLeft="16sp"
-        android:layout_marginRight="16sp"
-        android:layout_marginBottom="16sp"
+       android:elevation="8dp"
+        android:paddingLeft="40dp"
+        android:paddingRight="30dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:background="#ffffff">
 
         <ImageView
-            android:layout_width="55sp"
+            android:layout_width="55dp"
             android:id="@+id/google"
-            android:layout_height="50sp"
+            android:layout_height="50dp"
             android:src="@drawable/googleg_disabled_color_18"
-            android:padding="10sp"
+            android:padding="10dp"
             android:background="@drawable/circle_filled"
             android:clickable="true"
             android:layout_gravity="center_vertical"
@@ -169,23 +169,23 @@
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_height="match_parent"
-            android:paddingLeft="16sp"
+            android:paddingLeft="16dp"
             android:weightSum="2"
             android:gravity="center">
 
             <TextView
-                android:layout_width="100sp"
+                android:layout_width="100dp"
                 android:text="Google"
                 android:textColor="#000000"
-                android:textSize="20sp"
-                android:layout_height="0sp"
+                android:textSize="20dp"
+                android:layout_height="0dp"
                 android:layout_weight="1.25"/>
 
             <TextView
 
-                android:layout_height="0sp"
+                android:layout_height="0dp"
                 android:layout_weight="0.75"
-                android:layout_width="100sp"
+                android:layout_width="100dp"
                 android:id="@+id/google_text_veri"
                 android:text="Not verified !"
                 android:textColor="#ff4e4e"/>
@@ -199,19 +199,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-       android:elevation="5sp"
-        android:paddingLeft="40sp"
-        android:paddingRight="30sp"
-        android:paddingTop="10sp"
-        android:paddingBottom="10sp"
-        android:layout_marginLeft="16sp"
-        android:layout_marginRight="16sp"
-        android:layout_marginBottom="16sp"
+       android:elevation="5dp"
+        android:paddingLeft="40dp"
+        android:paddingRight="30dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:background="#ffffff">
 
         <ImageView
-            android:layout_width="55sp"
-            android:layout_height="50sp"
+            android:layout_width="55dp"
+            android:layout_height="50dp"
             android:clickable="true"
             android:src="@drawable/insta_black"
             android:id="@+id/insta"
@@ -223,23 +223,23 @@
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_height="match_parent"
-            android:paddingLeft="16sp"
+            android:paddingLeft="16dp"
             android:weightSum="2"
             android:gravity="center">
 
             <TextView
-                android:layout_width="100sp"
+                android:layout_width="100dp"
                 android:text="Instagram"
                 android:textColor="#000000"
-                android:textSize="20sp"
-                android:layout_height="0sp"
+                android:textSize="20dp"
+                android:layout_height="0dp"
                 android:layout_weight="1.25"/>
 
             <TextView
 
-                android:layout_height="0sp"
+                android:layout_height="0dp"
                 android:layout_weight="0.75"
-                android:layout_width="100sp"
+                android:layout_width="100dp"
                 android:id="@+id/insta_text_veri"
                 android:text="Not verified !"
                 android:textColor="#ff4e4e"/>
@@ -254,19 +254,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:elevation="5sp"
-        android:paddingLeft="40sp"
-        android:paddingRight="30sp"
-        android:paddingTop="10sp"
-        android:paddingBottom="10sp"
-        android:layout_marginLeft="16sp"
-        android:layout_marginRight="16sp"
-        android:layout_marginBottom="16sp"
+        android:elevation="5dp"
+        android:paddingLeft="40dp"
+        android:paddingRight="30dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:background="#ffffff">
 
         <ImageView
-            android:layout_width="55sp"
-            android:layout_height="50sp"
+            android:layout_width="55dp"
+            android:layout_height="50dp"
             android:clickable="true"
             android:src="@drawable/twitter_black"
             android:id="@+id/twitter"
@@ -278,23 +278,23 @@
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_height="match_parent"
-            android:paddingLeft="16sp"
+            android:paddingLeft="16dp"
             android:weightSum="2"
             android:gravity="center">
 
             <TextView
-                android:layout_width="100sp"
+                android:layout_width="100dp"
                 android:text="Twitter"
                 android:textColor="#000000"
-                android:textSize="20sp"
-                android:layout_height="0sp"
+                android:textSize="20dp"
+                android:layout_height="0dp"
                 android:layout_weight="1.25"/>
 
             <TextView
 
-                android:layout_height="0sp"
+                android:layout_height="0dp"
                 android:layout_weight="0.75"
-                android:layout_width="100sp"
+                android:layout_width="100dp"
                 android:id="@+id/twitter_text_veri"
                 android:text="Not verified !"
                 android:textColor="#ff4e4e"/>
@@ -306,9 +306,9 @@
 
     <Button
         android:id="@+id/verification_skip"
-        android:layout_width="360sp"
-        android:layout_height="40sp"
-        android:layout_marginBottom="10sp"
+        android:layout_width="360dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/button_round"
         android:gravity="center"
         android:layout_gravity="center_horizontal"
@@ -320,9 +320,9 @@
 
     <Button
         android:id="@+id/verification_done"
-        android:layout_width="360sp"
-        android:layout_height="40sp"
-        android:layout_marginBottom="10sp"
+        android:layout_width="360dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/button_round"
         android:gravity="center"
         android:layout_gravity="center_horizontal"
