--- a/app/src/main/res/layout/audition_rv_item.xml
+++ b/app/src/main/res/layout/audition_rv_item.xml
@@ -30,7 +30,7 @@
         android:textStyle="bold"
         android:marqueeRepeatLimit="marquee_forever"
         android:singleLine="true"
-        android:textSize="28sp"
+        android:textSize="28dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/audition_photo"
         tools:layout_editor_absoluteX="8dp" />
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Location: Someplace"
-        android:textSize="14sp"
+        android:textSize="14dp"
         android:textColor="#777777"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/audition_title"
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:text="Total Applications:"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textStyle="bold"
         android:textColor="#777777"
         app:layout_constraintBottom_toBottomOf="parent"
