--- a/app/src/main/res/layout/auditions_cards_layout.xml
+++ b/app/src/main/res/layout/auditions_cards_layout.xml
@@ -13,14 +13,14 @@
         android:layout_height="wrap_content"
         card_view:cardBackgroundColor="#000000"
         card_view:cardCornerRadius="10dp"
-        card_view:cardElevation="2sp"
+        card_view:cardElevation="2dp"
         card_view:cardUseCompatPadding="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="5sp">
+            android:padding="5dp">
 
             <ImageView
                 android:id="@+id/dashboardimage"
@@ -45,7 +45,7 @@
                     android:layout_weight="2"
                     android:gravity="center"
                     android:text="MODELLING PHOTOSHOOT"
-                    android:textSize="20sp" />
+                    android:textSize="20dp" />
 
                 <Switch
                     android:layout_width="wrap_content"
