--- a/app/src/main/res/layout/cards_layout.xml
+++ b/app/src/main/res/layout/cards_layout.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardBackgroundColor="#000000"
-        card_view:cardElevation="5sp"
+        card_view:cardElevation="5dp"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="5sp">
+            android:padding="5dp">
 
             <ImageView
                 android:id="@+id/dashboardimage"
@@ -49,7 +49,7 @@
                     android:layout_weight="2"
                     android:gravity="center"
                     android:text="MODELLING PHOTOSHOOT"
-                    android:textSize="20sp" />
+                    android:textSize="20dp" />
 
                 <Switch
                     android:id="@+id/open_auditions_switch"
@@ -95,8 +95,8 @@
 
 
             <ImageView
-                android:layout_width="25sp"
-                android:layout_height="25sp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:id="@+id/editicon"
                 android:src="@drawable/edit"
                 android:layout_below="@+id/LocationText"
@@ -105,10 +105,10 @@
 
             <ImageView
                 android:id="@+id/deleteicon"
-                android:layout_marginRight="10sp"
-                android:layout_marginLeft="5sp"
-                android:layout_width="25sp"
-                android:layout_height="25sp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="5dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_alignParentRight="true"
                 android:layout_below="@id/LocationText"
                 android:src="@drawable/delete"
