--- a/app/src/main/res/layout/cards_layout_closed_aud.xml
+++ b/app/src/main/res/layout/cards_layout_closed_aud.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="5sp">
+            android:padding="5dp">
 
             <ImageView
                 android:id="@+id/dashboardimage"
@@ -46,7 +46,7 @@
                     android:layout_weight="2"
                     android:gravity="center"
                     android:text="MODELLING PHOTOSHOOT"
-                    android:textSize="20sp" />
+                    android:textSize="20dp" />
 
             </LinearLayout>
 
@@ -87,10 +87,10 @@
 
             <ImageView
                 android:id="@+id/deleteicon1"
-                android:layout_marginRight="10sp"
-                android:layout_marginLeft="5sp"
-                android:layout_width="25sp"
-                android:layout_height="25sp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="5dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_alignParentRight="true"
                 android:layout_below="@id/LocationText"
                 android:src="@drawable/delete"
