--- a/app/src/main/res/layout/custom.xml
+++ b/app/src/main/res/layout/custom.xml
@@ -8,7 +8,7 @@
         android:layout_width="50dp"
         android:layout_gravity="center_vertical"
         android:layout_height="50dp"
-        android:layout_margin="5sp"
+        android:layout_margin="5dp"
         android:src="@drawable/ic_launcher"/>
 
     <TextView
@@ -18,7 +18,7 @@
         android:layout_gravity="center_vertical"
         android:text="Text Here"
         android:textColor="#ffff"
-        android:textSize="15sp"
-        android:layout_marginLeft="16sp"/>
+        android:textSize="15dp"
+        android:layout_marginLeft="16dp"/>
 
 </LinearLayout>
