--- a/app/src/main/res/layout/edit_picture_aud.xml
+++ b/app/src/main/res/layout/edit_picture_aud.xml
@@ -11,7 +11,7 @@
     <com.steelkiwi.cropiwa.CropIwaView
         android:id="@+id/crop_view"
         android:layout_width="match_parent"
-        android:layout_height="400sp"
+        android:layout_height="400dp"
         android:layout_centerInParent="true"
         app:ci_dynamic_aspect_ratio="false"
         app:ci_draw_grid="true"
@@ -26,13 +26,13 @@
     <LinearLayout
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="40sp"
+        android:layout_height="40dp"
         android:orientation="horizontal"
         android:weightSum="5">
 
         <Button
             android:id="@+id/cancelthecrop"
-            android:layout_width="0sp"
+            android:layout_width="0dp"
             android:layout_weight="2.5"
             android:layout_height="match_parent"
             android:text="cancel"
@@ -42,7 +42,7 @@
 
         <Button
             android:id="@+id/cropandsave"
-            android:layout_width="0sp"
+            android:layout_width="0dp"
             android:layout_weight="2.5"
             android:layout_height="match_parent"
             android:text="continue"
