--- a/app/src/main/res/layout/fragment_edit_image.xml
+++ b/app/src/main/res/layout/fragment_edit_image.xml
@@ -4,26 +4,26 @@
     android:layout_height="match_parent"
     android:gravity="center_vertical"
     android:orientation="vertical"
-    android:paddingLeft="16sp"
-    android:paddingRight="16sp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     tools:context="com.twenty.four.crafts.registration.filter.EditImageFragment">
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingBottom="10sp"
-    android:paddingTop="10sp">
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp">
 
 
     <TextView
-        android:layout_width="100sp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="@string/lbl_brightness" />
 
     <SeekBar
         android:id="@+id/seekbar_brightness"
-        android:layout_width="0sp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
@@ -33,12 +33,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingBottom="10sp"
-    android:paddingTop="10sp">
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp">
 
 
     <TextView
-        android:layout_width="100sp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="@string/lbl_contrast" />
 
@@ -53,11 +53,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingBottom="10sp"
-    android:paddingTop="10sp">
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp">
 
     <TextView
-        android:layout_width="100sp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="@string/lbl_saturation" />
 
