--- a/app/src/main/res/layout/fragment_filters_list.xml
+++ b/app/src/main/res/layout/fragment_filters_list.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipChildren="false"
-        android:padding="4sp"
+        android:padding="4dp"
         android:scrollbars="none" />
 
 </FrameLayout>
