--- a/app/src/main/res/layout/nav_header_main2.xml
+++ b/app/src/main/res/layout/nav_header_main2.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 android:layout_width="match_parent"
-android:layout_height="250sp"
+android:layout_height="250dp"
 android:orientation="vertical"
 android:id="@+id/nav_header_crafts"
 android:theme="@style/ThemeOverlay.AppCompat.Dark">
@@ -27,7 +27,7 @@ android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0sp"
+        android:layout_height="0dp"
         android:layout_weight="3.25">
 
     <LinearLayout
@@ -36,23 +36,23 @@ android:theme="@style/ThemeOverlay.AppCompat.Dark">
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:weightSum="6"
-        android:paddingBottom="15sp">
+        android:paddingBottom="15dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/nav_pic"
-            android:layout_height="0sp"
+            android:layout_height="0dp"
             android:src="@drawable/sample1"
             android:layout_weight="4"
-            android:elevation="8sp"
-            android:layout_margin="5sp"
+            android:elevation="8dp"
+            android:layout_margin="5dp"
             android:layout_width="match_parent"
-            android:padding="2sp"
+            android:padding="2dp"
             app:srcCompat="@mipmap/ic_launcher_round"/>
 
 
         <LinearLayout
-            android:layout_height="0sp"
+            android:layout_height="0dp"
             android:layout_width="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_weight="2"
@@ -62,9 +62,9 @@ android:theme="@style/ThemeOverlay.AppCompat.Dark">
             <TextView
                 android:id="@+id/nav_name"
                 android:layout_width="match_parent"
-                android:layout_height="0sp"
+                android:layout_height="0dp"
                 android:layout_weight="2"
-                android:layout_margin="5sp"
+                android:layout_margin="5dp"
                 android:text="Name"
                 android:textSize="25sp"
                 android:textColor="#ffffff"
@@ -90,23 +90,23 @@ android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
         <ImageView
             android:id="@+id/purchase_coins"
-            android:layout_width="40sp"
-            android:layout_height="40sp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_margin="5sp"
+            android:layout_margin="5dp"
             android:background="?android:attr/selectableItemBackground"
             android:focusable="true"
-            android:padding="5sp"
+            android:padding="5dp"
             android:src="@drawable/free_coins" />
 
         <TextView
-            android:layout_width="25sp"
-            android:layout_height="25sp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:id="@+id/coinCount"
             android:text="250"
             android:gravity="bottom"
-            android:layout_marginBottom="5sp"
+            android:layout_marginBottom="5dp"
             android:layout_alignParentBottom="true"
             android:layout_toLeftOf="@id/purchase_coins"/>
 
@@ -115,7 +115,7 @@ android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0sp"
+        android:layout_height="0dp"
         android:layout_weight="0.75"
         android:weightSum="3"
         android:orientation="horizontal"
@@ -123,33 +123,33 @@ android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
         <ImageView
             android:id="@+id/aud_handy"
-            android:layout_width="0sp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="?android:attr/selectableItemBackground"
             android:src="@drawable/aud_handy"
             android:scaleType="fitCenter"
-            android:padding="5sp"/>
+            android:padding="5dp"/>
 
         <ImageView
             android:id="@+id/fav_handy"
-            android:layout_width="0sp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="?android:attr/selectableItemBackground"
             android:src="@drawable/fav_handy"
             android:scaleType="fitCenter"
-            android:padding="5sp"/>
+            android:padding="5dp"/>
 
         <ImageView
             android:id="@+id/inbox_handy"
-            android:layout_width="0sp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="?android:attr/selectableItemBackground"
             android:src="@drawable/inbox_handy"
             android:scaleType="fitCenter"
-            android:padding="5sp"/>
+            android:padding="5dp"/>
 
     </LinearLayout>
 
