--- a/app/src/main/res/layout/nav_header_main3.xml
+++ b/app/src/main/res/layout/nav_header_main3.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="250sp"
+    android:layout_height="250dp"
     android:orientation="vertical"
     android:id="@+id/nav_header_clients"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
@@ -28,27 +28,27 @@
         <LinearLayout
             android:id="@+id/header_for_clients"
             android:layout_width="match_parent"
-            android:layout_height="0sp"
+            android:layout_height="0dp"
             android:layout_weight="3.25"
             android:orientation="vertical"
             android:weightSum="6"
-            android:paddingBottom="15sp">
+            android:paddingBottom="15dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/nav_pic"
-                android:layout_height="0sp"
+                android:layout_height="0dp"
                 android:src="@drawable/sample1"
                 android:layout_weight="4"
-                android:elevation="8sp"
-                android:layout_margin="5sp"
+                android:elevation="8dp"
+                android:layout_margin="5dp"
                 android:layout_width="match_parent"
-                android:padding="2sp"
+                android:padding="2dp"
                 app:srcCompat="@mipmap/ic_launcher_round"/>
 
 
             <LinearLayout
-                android:layout_height="0sp"
+                android:layout_height="0dp"
                 android:layout_width="match_parent"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="2"
@@ -58,11 +58,11 @@
                 <TextView
                     android:id="@+id/nav_name"
                     android:layout_width="match_parent"
-                    android:layout_height="0sp"
+                    android:layout_height="0dp"
                     android:layout_weight="2"
-                    android:layout_margin="5sp"
+                    android:layout_margin="5dp"
                     android:text="Name"
-                    android:textSize="25sp"
+                    android:textSize="25dp"
                     android:textColor="#ffffff"
                     android:textAlignment="center"
                     android:layout_gravity="center_vertical"
@@ -71,12 +71,12 @@
                 <TextView
                     android:id="@+id/nav_craft"
                     android:layout_width="match_parent"
-                    android:layout_height="0sp"
+                    android:layout_height="0dp"
                     android:layout_weight="1"
                     android:text="Craft"
                     android:textColor="#ffffff"
                     android:fontFamily="sans-serif-condensed"
-                    android:textSize="12sp"
+                    android:textSize="12dp"
                     android:textAlignment="center"/>
 
             </LinearLayout>
@@ -87,7 +87,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0sp"
+            android:layout_height="0dp"
             android:layout_weight="0.75"
             android:weightSum="3"
             android:background="#323232"
@@ -95,33 +95,33 @@
 
             <ImageView
                 android:id="@+id/aud_handy"
-                android:layout_width="0sp"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="?android:attr/selectableItemBackground"
                 android:src="@drawable/aud_handy"
                 android:scaleType="fitCenter"
-                android:padding="5sp"/>
+                android:padding="5dp"/>
 
             <ImageView
                 android:id="@+id/fav_handy"
-                android:layout_width="0sp"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="?android:attr/selectableItemBackground"
                 android:src="@drawable/fav_handy"
                 android:scaleType="fitCenter"
-                android:padding="5sp"/>
+                android:padding="5dp"/>
 
             <ImageView
                 android:id="@+id/inbox_handy"
-                android:layout_width="0sp"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="?android:attr/selectableItemBackground"
                 android:src="@drawable/inbox_handy"
                 android:scaleType="fitCenter"
-                android:padding="5sp"/>
+                android:padding="5dp"/>
 
         </LinearLayout>
 
