--- a/app/src/main/res/layout/single_item_trash.xml
+++ b/app/src/main/res/layout/single_item_trash.xml
@@ -8,13 +8,13 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/IMG"
-        android:layout_width="80sp"
-        android:layout_height="60sp"
+        android:layout_width="80dp"
+        android:layout_height="60dp"
         android:src="@drawable/sample1"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_margin="10sp"/>
+        android:layout_margin="10dp"/>
 
 
     <TextView
