--- a/app/src/main/res/layout/tinder_swipe_in_msg_view.xml
+++ b/app/src/main/res/layout/tinder_swipe_in_msg_view.xml
@@ -10,6 +10,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="40dp"
        android:src="@drawable/ic_heart"
-        android:textSize="32sp"
+        android:textSize="32dp"
         android:textStyle="bold" />
 </LinearLayout>
